[package]
name = "futures-task"
edition = "2018"
version = "0.3.8"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
documentation = "https://docs.rs/futures-task/0.3.8"
description = """
Tools for working with tasks.
"""

[features]
default = ["std"]
std = ["alloc", "once_cell", "mesalock_sgx"]
alloc = []
mesalock_sgx = ["sgx_tstd"]

# Unstable features
# These features are outside of the normal semver guarantees and require the
# `unstable` feature as an explicit opt-in to unstable API.
unstable = []
cfg-target-has-atomic = []

[dependencies]
once_cell = { git = "https://github.com/Kailai-Wang/once_cell-sgx", branch = "sgx-sdk-2.0.0", optional = true }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "v2.0.0-preview-11-17", optional = true }

[dev-dependencies]
#futures = { path = "../futures", version = "0.3.8" }

[package.metadata.docs.rs]
all-features = true
